# clandmark

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  build_clandmark_libs.bat  build_examples.bat  build_matlab_interface.bat  build_python_interface.bat  build_setup_variables.bat  index.html  params.json
cmake/Modules/: FindCImg.cmake  FindCLANDMARK.cmake  FindFLANDMARK.cmake  FindRapidXML.cmake  Findclandmark.cmake  Findflandmark.cmake  UseCython.cmake
cmake/Templates/: CLandmarkConfig.cmake
data/: 8Lfrontal_SPLIT_1_init.xml  flandmark_model.xml
examples/: CMakeLists.txt  helpers.h  static_input.cpp  video_input.cpp
examples/cmake/Modules/: Findclandmark.cmake
learning/: README
learning/bmrm/: bmrm.m  bmrmconstr2.m  compile_mex.m  mxMultATB.cpp  mxMultATx.cpp  mxMultAx.cpp  parbmrm.m
learning/mv_parallel/: range_parallel_learn_mv_constrbmrm_AFLW.m
learning/mv_parallel/MAT/: A.mat  transform_F2learning.m
learning/mv_parallel/functions/: compute_err_mv_b_flandmark.m  compute_err_mv_flandmark.m  compute_table_loss_mv.m  getKappa.m  jointmv_prepareImagesGT.m  loss_mv_b_flandmark.m  loss_par_mv_b_flandmark.m  loss_par_mv_flandmark.m  risk_mv_b.m  risk_par_mv.m  risk_par_mv_b.m
learning/mv_parallel/model/: JOINT_MV_SPLIT_1_-HALF-PROFILE_init.xml  JOINT_MV_SPLIT_1_-PROFILE_init.xml  JOINT_MV_SPLIT_1_FRONTAL_init.xml  JOINT_MV_SPLIT_1_HALF-PROFILE_init.xml  JOINT_MV_SPLIT_1_PROFILE_init.xml
learning/mv_parallel/preprocess/: createModelForJointMV.m
learning/sv_parallel/: README.md  sv_parallel_learn_bmrmconstr.m
learning/sv_parallel/MAT/: transform_F2learning.m
learning/sv_parallel/data/: create_TRN_and_VAL.m
learning/sv_parallel/functions/: computeKappa.m  compute_err_sv_flandmark.m  compute_loss_sv.m  loss_par_sv_flandmark.m  loss_sv_flandmark.m  prepareImagesGT.m  risk_par_sv_flandmark.m  risk_sv_flandmark.m
learning/sv_parallel/preprocess/: createModelFor300W.m
libclandmark/: CAppearanceModel.cpp  CAppearanceModel.h  CDAGMaxSumSolver.cpp  CDAGMaxSumSolver.h  CDeformationCost.cpp  CDeformationCost.h  CDisplacementDeformationCost.cpp  CDisplacementDeformationCost.h  CFeaturePool.cpp  CFeaturePool.h  CFeatures.cpp  CFeatures.h  CLandmark.cpp  CLandmark.h  CLandmarkConfig.h.in  CLoss.cpp  CLoss.h  CMakeLists.txt  CMaxSumSolver.cpp  CMaxSumSolver.h  CNormalizedEuclideanLoss.cpp  CNormalizedEuclideanLoss.h  CSparseLBPAppearanceModel.cpp  CSparseLBPAppearanceModel.h  CSparseLBPFeatures.cpp  CSparseLBPFeatures.h  CTableLoss.cpp  CTableLoss.h  CTimer.h  CTreeMaxSumSolver.cpp  CTreeMaxSumSolver.h  CTypes.h  CXMLInOut.cpp  CXMLInOut.h  CZeroLoss.cpp  CZeroLoss.h  Flandmark.cpp  Flandmark.h  base64.h  clandmarkConfig.cmake.in  (+3 more)
matlab_interface/: CMakeLists.txt  compile_mex.m  featuresPool_class.m  featuresPool_interface_mex.cpp  flandmark_class.m  flandmark_handle.h  flandmark_interface_mex.cpp  flandmark_simple_example.m  simple_example.m
matlab_interface/functions/: ChangeModelsSS.m  c2f_dpm.m  create_xml_init.m  create_xml_init2.m  flandmark_opt_sv_detector.m  flandmark_xmlread.m  getOverlapAABB.m  getUpdatedBBOX.m  isGTcompatibleWithModel.m  lsbestline.m  plotLandmarks.m  plotbox_full.m  speedup_jointmv_b_detector.m  speedup_jointmv_detector.m  speedup_mv_detector.m
matlab_interface/mex/: featuresPool_interface.mexa64  flandmark_interface.mexa64
python_interface/: CMakeLists.txt  README  TODO.txt  setup.py
python_interface/examples/: webcam_input.py  webcam_input_jointmv.py  webcam_input_single.py
python_interface/include/: __init__.py  c_cimg.pxd  c_featurePool.pxd  c_flandmark.pxd  py_featurePool.pxd  py_flandmark.pxd
python_interface/ipython_notebooks/: FlandmarkPythonInterfaceExample.ipynb
python_interface/src/: CMakeLists.txt  py_featurePool.pyx  py_flandmark.pyx
